tests/error/modifier_errors/higher_order.err
Error: Dagger constraint violation (at $FILE:10:4)
   | 
 8 | @guppy(dagger=True)
 9 | def test_ho(f: Callable[[qubit], None, []], q: qubit) -> None:
10 |     f(q)
   |     ^^^^ This function cannot be called in a dagger context

Guppy compilation failed due to 1 previous error
